[BUG] updated scrollbar colors

--- a/src/components/layout/navbar/navbar.scss
+++ b/src/components/layout/navbar/navbar.scss
@@ -6,7 +6,7 @@ $button-color: #f6f6f6;
 $primary-text-1: #008234;
 body {
   --sb-track-color: #232E33;
-  --sb-thumb-color: #01abde;
+  --sb-thumb-color: #008234;
   --sb-size: 14px;
 }
 
